# cmake_cook_book

./: information.txt
1_10_use_control_stream/cxx-example/: CMakeLists.txt
1_10_use_control_stream/cxx-example/bld/: CMakeCache.txt  Makefile  cmake_install.cmake  compute-areas
1_3_build_so_a/: CMakeLists.notonename  CMakeLists.txt  Message.cpp
1_4_if_control/: CMakeLists.txt  Message.hpp
1_5_use_option/: CMakeLists.txt  hello-world.cpp  readme.md
1_6_choise_compare/: CMakeLists.txt  cmake_information.txt  readme.txt
1_6_choise_compare/bld/: CMakeCache.txt  Makefile  cmake_install.cmake
1_7_build_type/: CMakeLists.txt
1_7_build_type/bld/: CMakeCache.txt  Makefile  cmake_install.cmake
1_8_set_build_option/: CMakeLists.txt  computer_area.cpp  geometry_square.cpp  geometry_square.hpp
1_8_set_build_option/bld/: CMakeCache.txt  Makefile  cmake_install.cmake  compute-areas
1_9_set_standard/: README.md
1_9_set_standard/cxx-example/: CMakeLists.txt
1_9_set_standard/cxx-example/bld/: CMakeCache.txt  Makefile  cmake_install.cmake
2_1_check_OS/c-example/: CMakeLists.txt
2_1_check_OS/c-example/bld/: CMakeCache.txt  Makefile  cmake_install.cmake
2_1_check_OS/cxx-example/: CMakeLists.txt
2_1_check_OS/cxx-example/bld/: CMakeCache.txt  Makefile  cmake_install.cmake  hello-world
2_2_Platform_related_code/: CMakeLists.txt  CMakeLists.txt.bk  hello-world.cpp
2_2_Platform_related_code/bld/: CMakeCache.txt  Makefile  cmake_install.cmake  hello-world
2_3_about_compiler_code/: CMakeLists.txt  hello-world.cpp
2_3_about_compiler_code/bld/: CMakeCache.txt  Makefile  cmake_install.cmake  hello-world
2_4_arch_dependent/: CMakeLists.txt  arch_dependent.cpp
2_4_arch_dependent/bld/: CMakeCache.txt  Makefile  arch-dependent  cmake_install.cmake
2_5_Detect_processor_instruction_set/: README.md
2_5_Detect_processor_instruction_set/cxx-example/: CMakeLists.txt  CMakeLists.txt.bk
2_5_Detect_processor_instruction_set/cxx-example/bld/: CMakeCache.txt  Makefile  cmake_install.cmake  config.h
2_6_Eigen_vector/: README.md
2_6_Eigen_vector/cxx-example/: CMakeLists.txt  linear-algebra.cpp
2_6_Eigen_vector/cxx-example/bld/: CMakeCache.txt
3_1_python_interpreter/example/: CMakeLists.txt
3_1_python_interpreter/example/bld/: CMakeCache.txt  Makefile  cmake_install.cmake
3_2_python_libary/c-example/: CMakeLists.txt  Makefile  hello-embedded-python  start.sh
3_2_python_libary/c-example/bld/: CMakeCache.txt  Makefile  cmake_install.cmake  core.95782  hello-embedded-python
3_3_python_moudule_pkg/cxx-example/: CMakeLists.txt  pure-embedding  start.sh
3_3_python_moudule_pkg/cxx-example/bld/: CMakeCache.txt  Makefile  cmake_install.cmake  pure-embedding
